Dark mode fix
Calendar navigation had default background color when disabled (keep clicking year until reaching decade view)

--- a/src/calendar.css
+++ b/src/calendar.css
@@ -21,6 +21,11 @@
     @apply bg-base-300;
 }
 
+/* Disabled colors */
+.react-calendar__navigation button:disabled {
+    @apply bg-base-200 opacity-35;
+}
+
 /* Hide prev/next year buttons */
 .react-calendar__navigation__prev2-button {
     display: none;
